[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/BitCasual.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/3_lives.png" type="Texture" id=2]
[ext_resource path="res://src/HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 76.0
margin_top = -9.0
margin_right = 613.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 4.0
margin_top = 507.0
margin_right = 1020.0
margin_bottom = 627.0
custom_fonts/font = SubResource( 2 )
text = "Press <ENTER> to start a new game."
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Sprite" parent="."]
position = Vector2( 874, 24 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TitleLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -127.0
margin_bottom = -33.0
custom_fonts/font = SubResource( 3 )
text = "House Plant Hero"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
